--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "emmet-monaco-es": "^5.3.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.41.0",
     "next": "13.4.12",
