--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "emmet-monaco-es": "^5.3.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.41.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "react-tooltip": "^5.20.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.196"
+    "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.196",
+    "@types/react-modal": "^3.16.0"
   }
 }
