--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "emmet-monaco-es": "^5.3.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^10.16.4",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.41.0",
