--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "monaco-editor": "^0.41.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "prettier": "^3.1.0",
     "react": "18.2.0",
     "react-contexify": "^6.0.0",
     "react-dom": "18.2.0",
