--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "8.4.27",
     "prettier": "^3.1.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-contexify": "^6.0.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/lodash": "^4.14.196",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-modal": "^3.16.0"
   }
 }
