--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.4",
     "jszip": "^3.10.1",
+    "less": "^4.2.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.41.0",
     "next": "13.4.12",
@@ -34,12 +35,17 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
+    "react-scrollbars-custom": "^4.1.1",
     "react-tooltip": "^5.20.0",
+    "sass": "^1.69.5",
+    "scss": "^0.2.4",
+    "snowflake-uid": "^2.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/less": "^3.0.6",
     "@types/lodash": "^4.14.196",
     "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-modal": "^3.16.0"
